--- a/src/style/Login copy.css
+++ b/src/style/Login copy.css
@@ -1,6 +1,3 @@
-/*
-Global Style
-*/
 html,
 body {
   height: 100%;
@@ -11,17 +8,12 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #141414;
+  background-color: black;
 }
 
 #root {
   width: 100%;
 }
-
-
-/*
-Login
-*/
 
 .form-signin {
   max-width: 330px;
@@ -45,14 +37,14 @@ Login
 
 .form-signin input[type="email"] {
   margin-bottom: 10px;
-  border-bottom-right-radius: 5px;
+  border-bottom-right-radius: px;
   border-bottom-left-radius: 5px;
 }
 
 .form-signin input[type="password"] {
   margin-bottom: 10px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .checkbox {
@@ -62,6 +54,14 @@ Login
 
 .btn {
 
+  color: #00ffff;
+}
+
+
+
+.btn-primary {
+  background-color: black;
+  border-color: #00ffff;
   color: #00ffff;
 }
 
@@ -115,5 +115,4 @@ Login
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
 }
-
 
