--- a/src/style/style.css
+++ b/src/style/style.css
@@ -14,6 +14,15 @@ body {
   background-color: #141414;
 }
 
+.alert-fixed {
+  position:fixed; 
+  top: 0px; 
+  left: 0px; 
+  width: 100%;
+  z-index:9999; 
+  border-radius:0px
+}
+
 a{
   color: #00ffff;
   text-decoration: none;
